2003-07-07  Jeffrey Stedfast  <fejj@ximian.com>

	* upgrade-mailer.c: Updated to use the camel-file-utils version of
	mkdir.

2003-07-02  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-tools.c (mail_tool_forward_message): Strip the signature
	from the body text. Fixes bug #45523. While we're here, also fix
	the code to quote exactly the same way as the
	mail_tool_quote_message() function.
	(mail_tool_quote_message): The last arg should not be
	'want_plain', because that arg is for whether or not the body
	should be quoted.

	* folder-browser.c (message_list_drag_data_get): Apply a
	From-filter when dragging as a test/uri-list and
	message/rfc822. Fixes bug #45617. Also free the uids ptrarray for
	the text/uri-list case.

2003-07-01  Dan Winship  <danw@ximian.com>

	* mail-display.c (pixbuf_for_mime_type): Gone
	(pixbuf_gen_idle): Use e_icon_for_mime_type instead.

2003-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (filter_date): Use the newer utf8 versions of the
	e_strftime*() functions since our format strings are all now in
	UTF-8.

	* mail-display.c (mail_display_render): Use the newer
	e_utf8_strftime_fix_am_pm().

	* mail-callbacks.c (mail_generate_reply): Use e_utf8_strftime(),
	otherwise we can end up with invalid utf-8.

2003-06-25  Radek Doulik  <rodo@ximian.com>

	* mail-config.c (config_write_style): provide hardcoded default
	(red) spell error color

2003-06-24  Jeffrey Stedfast  <fejj@ximian.com>

	Might fix bug #45368 but I wouldn't bet on it.

	* message-browser.c (message_browser_new): Record the signal id
	for folder_loaded.
	(message_browser_folder_loaded): disconnect by id rather than
	searching for the handler. Save the id of the message_list_built
	signal handler.
	(message_browser_message_list_built): Disconnect the handler by
	id.
	(message_browser_destroy): Disconnect the signal handlers by id.

2003-06-20  Not Zed  <NotZed@Ximian.com>

	** See bug #43887

	* mail-format.c (mail_get_message_body): handle text/enriched and